# Esp32-cam-Codes

./: .gitignore
examples/human_face_detection/web/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
examples/human_face_detection/web/main/: CMakeLists.txt  app_main.cpp  board_heartbeat.c  board_heartbeat.h  device_config.c  device_config.h  esp32_power_management_fixed.c  provisioning_sync.c  provisioning_sync.h
hardware/components/esp32-camera/driver/: cam_hal.c  esp_camera.c
hardware/components/modules/: CMakeLists.txt
hardware/components/modules/ai/: who_ai_utils.cpp  who_ai_utils.hpp  who_human_face_recognition.cpp
hardware/components/modules/camera/: who_camera.c
hardware/components/modules/gps/: gps_neo7m.cpp  gps_neo7m.hpp  gps_types.h
hardware/components/modules/power/: power_config_sync.c  power_config_sync.h
hardware/components/modules/web/: app_httpd.cpp  app_mdns.c  app_wifi.c  app_wifi.h
hardware/components/storage/: CMakeLists.txt  csv_logger.c  csv_logger.h  csv_uploader.c  csv_uploader.h
